# EM_Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
gdelt_ml_pipeline/: config.py  data_loader.py  embeddings.py  evaluate.py  feature_engineering.py  main.py  models.py  train.py
